kubernetes/infrastructure/overlays/baremetal/config/longhorn/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth-proxy.k8s.edge.ashman.world/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - longhorn.k8s.edge.ashman.world
      secretName: longhorn-ingress-tls
  rules:
    - host: longhorn.k8s.edge.ashman.world
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
